Implement correlation IDs, validation, metrics, and CORS improvements
Co-authored-by: dronreef2 <182311393+dronreef2@users.noreply.github.com>